@@ -1,9 +1,9 @@
 package com.fangle.util;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
+import java.util.Base64.Decoder;
+import java.util.Base64.Encoder;
 
-import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 
 public class Base64Utils {
@@ -11,9 +11,14 @@ public class Base64Utils {
     /**
      * base64 编码器
      */
-    private static BASE64Encoder encoder = new BASE64Encoder();
+    private static Encoder encoder = null;
 
-    private static BASE64Decoder decoder = new BASE64Decoder();
+    private static Decoder decoder = null;
+
+    static {
+        decoder = Base64.getDecoder();
+        encoder = Base64.getEncoder();
+    }
 
     private Base64Utils(){}
 
@@ -29,7 +34,13 @@ public class Base64Utils {
         } catch (UnsupportedEncodingException e) {
             e.printStackTrace();
         }
-        String encodedText = encoder.encode(textByte);
+        byte[] encodedByte = encoder.encode(textByte);
+        String encodedText = "";
+        try {
+            encodedText = new String(encodedByte, "utf-8");
+        } catch (UnsupportedEncodingException e) {
+            e.printStackTrace();
+        }
         return encodedText;
     }
 
@@ -39,13 +50,20 @@ public class Base64Utils {
      * @return
      */
     public static String decode(String str){
-        String encodedText = "";
+        byte[] textByte = new byte[0];
         try {
-            encodedText = new String(decoder.decodeBuffer(str), "UTF-8");
-        } catch (IOException e) {
+            textByte = str.getBytes("UTF-8");
+        } catch (UnsupportedEncodingException e) {
             e.printStackTrace();
         }
-        return encodedText;
+        byte[] decodedByte = decoder.decode(textByte);
+        String decodedText = "";
+        try {
+            decodedText = new String(decodedByte, "utf-8");
+        } catch (UnsupportedEncodingException e) {
+            e.printStackTrace();
+        }
+        return decodedText;
     }
 
 }
